--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -81,7 +81,7 @@ $lightteal: #30BAB3; // teal //
 	border-style: none;
 	color:$purple;
 	font-size: 1rem;
-	font-weight:400;
+	font-weight:500;
 	background-color: $lightgrey;
 }
 
@@ -229,7 +229,7 @@ $lightteal: #30BAB3; // teal //
 	}	
 
 	.selected {
-		background-color:$red;	
+		background-color:$teal;	
 	}
 }
 
