--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
-<div class="hero-phrase center">
-<%= @category_title %> 
-
+<div class="hero-phrase">
+	<h1><%= @category_title %> </h1>
+	<h3><%= @category_slogan %> </h3>
 </div>
 
 <div class="hero-buttons center">
