--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -67,7 +67,7 @@ iframe {
   text-align:center;
   top:70px;
   left:20px;
-  background-color: $blue; 
+  background-color: $red; 
   width: 40px;
   height: 40px;
   border-radius: 3px;
