--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -395,20 +395,32 @@ body {
 .contribute-section {
   height:65px;
   float: right;
-  margin-right: 18px;
-  cursor:pointer;
+  margin-right: 5px;
   line-height: 65px;
   text-align: center;
-    
-    .contribute-button {
-      margin-top: 12px;
-      color:$white;
-      font-size: 2.5rem;
+  
+      a {
+          text-decoration:none;
+          color:$white;
+          font-size: 1.2rem;
+          font-weight: 200;
+          padding: 10px;
+          cursor:pointer;
+        }
+
+        &:hover a {
+          color:$lightgrey;
+        }
+        
+    // .contribute-button {
+    //   margin-top: 12px;
+    //   color:$white;
+    //   font-size: 2.5rem;
       
-            &:hover {
-              color:$lighterpurple;
-            }
-      }
+    //         &:hover {
+    //           color:$lighterpurple;
+    //         }
+    //   }
 }  
 
 
