--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -84,7 +84,8 @@
         
           <%= link_to submit_path do %>
             <div class="contribute-section">
-                  <i class="fa fa-plus contribute-button"></i>
+                  <%= link_to 'Contribute', submit_path, class: 'contribute-text' %>
+                  <!-- <i class="fa fa-plus contribute-button"></i> -->
             </div>
           <% end %>
         
