--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -29,7 +29,7 @@
 				<%= embed(post.url) %>
 			</div>
 		<%else%>
-			<a class="overlay <%= @category.name  %>" href="<%= post.article_url %>" onclick="window.open(this.href); return false;"> 
+			<a class="overlay <%= @category_color  %>" href="<%= post.article_url %>" onclick="window.open(this.href); return false;"> 
 				<span class="post-information">
 					<h5 class="post-description"><%= post.description %></h5>
 					<p class="created-at"><%= time_ago_in_words(post.created_at) %> ago</p>
