removing source,article url columns, making helper to scrape image from article website and cleaning up

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -17,11 +17,7 @@
 
 
   <div class="field">
-    <%= f.text_field :url, placeholder:'Youtube/Article Image/Vimeo URL' , class: 'post-url-field input' %>
-  </div>
-
-  <div class="field">
-    <%= f.text_field :article_url, placeholder:'Article URL' , class: 'post-article-url-field input' %>
+    <%= f.text_field :url, placeholder:'Youtube/Article/Vimeo URL' , class: 'post-url-field input' %>
   </div>
 
   <div class="field">
