--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -130,8 +130,9 @@ iframe {
 
 .post-information {
   display:block;
-  margin-left:70px;
+  margin-left:50px;
   margin-top:220px;
+  width: 90%;
   opacity:1;
   color:$white;
 }
@@ -140,7 +141,7 @@ iframe {
   font-weight:500;
   margin:0;
   padding:0;
-  font-size:2rem
+  font-size:1.5rem
 }
 
 .created-at {
