--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -132,13 +132,13 @@ iframe {
   display:block;
   margin-left:50px;
   margin-top:220px;
-  width: 90%;
   opacity:1;
-  color:$white;
+  color:$black;
 }
 
 .post-description {
   font-weight:500;
+  width: 90%;
   margin:0;
   padding:0;
   font-size:1.5rem
