--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -48,16 +48,20 @@ $yellow: #FFF5AC; // yellow //
 
 .link-container {
   width:100%;
-  height:50vh;
+  height:0;
   position:relative;
-  border:0
+  border:0;
+  padding-bottom: 51%;
 }
 
 iframe {
   width:100%;
-  height:50vh;
-  position:relative;
-  border:0
+  height: 100%;
+  position:absolute;
+  border:0;
+  left: 0;
+  top: 0;
+
 }
 
 .vote-wrapper {
@@ -130,15 +134,16 @@ iframe {
 
 .post-information {
   display:block;
-  margin-left:50px;
-  margin-top:220px;
+  position: absolute;
+  bottom:7.5%;
+  left:5%;
+  width: 90%;
   opacity:1;
   color:$black;
 }
 
 .post-description {
   font-weight:500;
-  width: 90%;
   margin:0;
   padding:0;
   font-size:1.5rem
