--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -92,29 +92,47 @@ body {
   border-radius:3px; 
 }
 
-/*// .cover-photo iframe{
-//   width:100%;
-//   height: 120vh;
-//   overflow-y:hidden;
-//   z-index:-5;
-// }*/
-
-.img-cover {
-  position: absolute;
-  top:0;
-  left:0;
-  margin: 0;
-  padding: 0;
-  width:100%;
-  height:100%;
-  background-color:$blue;
-  opacity: 0.7;
-  cursor:default;
+.homepage-hero-module {
+    border-right: none;
+    border-left: none;
+    position: relative;
 }
-
-.nb-cover-photo, .b-cover-photo,  {
-      width:1500px;
-      // visibility:hidden;
+.no-video .video-container video,
+.touch .video-container video {
+    display: none;
+}
+.no-video .video-container .poster,
+.touch .video-container .poster {
+    display: block !important;
+}
+.video-container {
+    position: relative;
+    bottom: 0%;
+    left: 0%;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    background: #000;
+}
+.video-container .poster img {
+    width: 100%;
+    bottom: 0;
+    position: absolute;
+}
+.video-container .filter {
+    z-index: 100;
+    // position: absolute;
+    background: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height: 100%;
+}
+.video-container video {
+    position: absolute;
+    z-index: 0;
+    bottom: 0;
+}
+.video-container video.fillWidth {
+    width: 100%;
 }
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
@@ -628,3 +646,6 @@ body {
   width:100%;
   z-index:11
 }
+
+
+
