--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -155,37 +155,22 @@ iframe {
   margin:0;
   height:100%;
   width:100%;
-  opacity:0;
-  transition:ease-in all 300ms;
   z-index:4
 }
 
-.post-container:hover {
-    .overlay {
-      opacity:.8;
-    }
+.overlay:hover {
+  opacity: 0.7;
+}
 
-     .purple {
-      background-color: $purple;
-    }
-     .green {
-      background-color: $green;
-    }
-     .red {
-      background-color: $red;
-    }
-     .orange {
-      background-color: $orange;
-    }
-     .yellow {
-      background-color: $yellow;
-    }
-     .white {
-      background-color: $white;
-    }
-     .blue {
-      background-color: $blue;
-    }
+.onion {
+  position:absolute;
+  cursor:pointer;
+  padding:0;
+  margin:0;
+  height:100%;
+  width:100%;
+  z-index:0;
+  background-color: rgba(0,0,0,0.6);
 }
 
 
@@ -196,7 +181,7 @@ iframe {
   left:5%;
   width: 90%;
   opacity:1;
-  color:$black;
+  color:$white;
 }
 
 .post-description {
