css and html bull

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -112,7 +112,7 @@ body {
   cursor:default;
 }
 
-.nb-cover-photo, .b-cover-photo,  {
+.cover-photo-img  {
       width:1500px;
       // visibility:hidden;
 }
