--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,12 +22,15 @@
   <div class="cover-photo">
             <% if current_page?('/') or current_page?('/posts') %>
                 <div class="img-cover"></div>
-                <%= image_tag('cover-photo-min', class: 'nb-cover-photo') %> 
+                <%= image_tag('cover-photo-min', class: 'cover-photo-img') %> 
+            <% elsif current_page?('/profile') %>
+                <div class="img-cover"></div>
+                <%= image_tag('blurred-cover-photo', class: 'cover-photo-img') %> 
             <% else %>
               <%= link_to root_path do %>
                 <div class="img-cover"></div>
               <% end %>
-                  <%= image_tag('blurred-cover-photo' ,class: 'b-cover-photo') %> 
+                  <%= image_tag('blurred-cover-photo' ,class: 'cover-photo-img') %> 
            <% end %>
   </div>
 
