--- a/app/views/posts/_bookmark.html.erb
+++ b/app/views/posts/_bookmark.html.erb
@@ -1,7 +1,11 @@
 		<%= link_to bookmark_post_path(post), id: dom_id(post, :bookmark), remote: true  do %>
+			<% if user_signed_in?%>
     			<% if Bookmark.where(user_id: current_user.id, post_id: post.id).present? %>
 					<%= image_tag("1442420149_icon-18-bookmark-teal.png")%><br>
 				<% else %>
 					<%= image_tag("1442420149_icon-18-bookmark.png")%><br>
 				<% end %>
+			<% else %>
+				<%= image_tag("1442420149_icon-18-bookmark.png")%><br>
+			<% end %>
     	<%end%>
