nth child sorted, could do with spacing out

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -23,7 +23,7 @@ $yellow: #FFF5AC; // yellow //
   width:100%;
   float:left;
   margin:0;
-  padding:0
+  padding:0;
 }
 
 .main-container {
@@ -38,9 +38,36 @@ $yellow: #FFF5AC; // yellow //
   z-index:3;
 }
 
-.main-container:nth-child(7n) {
+// .main-container:nth-child(7n) {
+//   width:99%;
+// }
+
+.main-container:nth-child(9n) {
+  width:66.6666666666667%;
+}
+.main-container:nth-child(9n+10) {
+  width:33.3333333333333%;
+}
+.main-container:nth-child(9n+11) {
+  width:33.3333333333333%;
+}
+
+.main-container:nth-child(9n+5) {
+  width:66.6666666666667%;
+  float:right;
+}
+.main-container:nth-child(9n+4) {
+  width:33.3333333333333%;
+}
+.main-container:nth-child(9n+6) {
+  width:33.3333333333333%;
+}
+
+.main-container:nth-child(9n+3) {
   width:100%;
 }
+
+
 
 .post-container img {
   width:100%
