--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,11 +43,11 @@ $lightteal: #30BAB3; // teal //
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 
 body {
-  background-color:#F4F4F5;
-  color:#fff;
+  background-color:$white;
+  color:$white;
   margin:0;
   padding: 0;
-  font-family:'Roboto',sans-serif;
+  font-family:'Roboto';
   font-weight:200;
   font-size:67.5%
 }
