--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -69,8 +69,6 @@ $yellow: #FFF5AC; // yellow //
   width:100%;
 }
 
-
-
 .post-container img {
   width:100%
 }
@@ -259,3 +257,13 @@ iframe {
 }
 
 
+
+.archive-title {
+  color:$white;
+}
+
+.archive-container {
+  width: 100%;
+  height: 100%;
+
+}
