--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
                 <div class="img-cover"></div>
                 <%= image_tag('cover-photo-min', class: 'cover-photo-img') %> 
             <% elsif current_page?('/profile') %>
+                
                 <div class="img-cover"></div>
                 <%= image_tag('blurred-cover-photo', class: 'cover-photo-img') %> 
             <% else %>
@@ -52,9 +53,9 @@
                   <div class="category-tags center">   
                         <h3>Click on a tag to filter content!</h3>
                         <ul>  
-                              <li> <%= nav_link_to 'All', root_path(anchor: "content-anchor"), class: 'category-links'  %></li>
+                              <li> <%= nav_link_to 'All', root_path, class: 'category-links'  %></li>
                               <% Category.all.each do |category|%>
-                                  <li><%= nav_link_to category.name, root_path(name: category.name, anchor: "content-anchor"), class: 'category-links' %></li>
+                                  <li><%= nav_link_to category.name, root_path(name: category.name), class: 'category-links' %></li>
                               <%end%>
                         </ul>
                   </div>
@@ -118,7 +119,7 @@
   
       </div>
       
-	<div class="content group" id="content-anchor">
+	<div class="content group">
       <%= yield %>
       </div>
 
