--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,11 +10,20 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
-
- *= require_tree .
+ * require_tree .
  *= require_self 
-
  */
+
+
+@import 'mixins';
+@import 'categories';
+@import 'contributions';
+@import 'forms';
+@import 'index';
+@import 'forms';
+@import 'posts';
+@import 'static_pages';
+
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - Constants - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
