--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -256,12 +256,12 @@ iframe {
   font-weight:500;
   margin: 0;
   padding:0;
-  font-size:1.5em
+  font-size:2rem
 }
 
 .created-at {
   padding:0;
-  font-size:1em
+  font-size:1rem
 }
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
