--- a/app/views/posts/profile.html.erb
+++ b/app/views/posts/profile.html.erb
@@ -1,4 +1,5 @@
-<div class="header">
+<div class="profile-header">
+	<h4><%= current_user.username %></h4>
 	<%= image_tag avatar_url(current_user) %>
 </div>
 
