--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -1,26 +1,4 @@
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
-/* - - - - - - - - - - - - - - - - - - - - - - - - - - - Constants - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
-/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
-
-$blue: #81B6DB;  // blue  //
-$green: #77DD77;    // green // 
-$red: #FF4955;   // red //
-$darkred: #FF5567; // darker red //
-$lightred: #FFD8E8; // light red//
-$orange: #FFB246;   // orange //
-$white: #fff; // white // 
-$black: #000; // black //
-$lightgrey: #eee; // lightgrey //
-$grey: #888; // grey //
-$purple: #8171B6; // purple //
-$lightpurple: #9181C6; // purple //
-$lighterpurple: #E1D1F9; // purple //
-$yellow: #FFF5AC; // yellow //
-$teal: #00AAA3; // teal //
-$lightteal: #30BAB3; // teal //
-
-
-/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - Main - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 
@@ -112,7 +90,10 @@ $lightteal: #30BAB3; // teal //
 .post-url-field, .post-article-url-field, .post-description-field {
 }
 
-.field_with_errors { display: inline-block; }
+// .field-error { 
+// 	display: inline-block;
+// 	border: 2px solid red;
+// }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - Category - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
@@ -175,9 +156,10 @@ $lightteal: #30BAB3; // teal //
 }
 
 .check_box:checked + .checkbox_label {
-  	color:$teal;
+  	color:$purple;
 	background-color: $white;
 }
+
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - Sign In - - - - - - - - - - - - - - - - - - - - - - - - - - -   */
